update .env.sample nginx file path

--- a/.env.sample
+++ b/.env.sample
@@ -46,7 +46,7 @@ NETWORK=webproxy
 # Here you can configure the path where nginx stores all the configurations and certificates.
 # With the value ./nginx-data it creates a new sub-folder into your current path.
 
-NGINX_FILES_PATH=./nginx-data
+NGINX_FILES_PATH=/data/nginx
 
 #
 # NGINX use special conf files
